# ckanji_ncurses

./: CMakeLists.txt
inc/: colors.h  db_inspect_state.h  db_manager_state.h  input_field.h  inspect_state.h  kanji_test_state.h  menu_state.h  state.h  state_manager.h  states.h  test_state.h  vocabulaty_test_state.h
src/: db_inspect_state.cpp  db_manager_state.cpp  input_field.cpp  kanji_test_state.cpp  main.cpp  menu_state.cpp  state_manager.cpp  vocabulary_test_state.cpp
